--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebLab3</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Gluten:wght@400;700&family=Raleway:wght@100;400;700&display=swap"
+        rel="stylesheet">
+    <title>WebLab4</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-    <h1>Test</h1>
+    <nav class="nav-main">
+        <div class="container">
+            <a href="" class="logo"><img src="./img/page/logo.svg" class="logo__img" alt="Logo"></a>
+            <ul class="nav-main__list">
+                <li><a href="" class="nav-main__item">start</a></li>
+                <li><a href="" class="nav-main__item">oferta</a></li>
+                <li><a href="" class="nav-main__item">galeria</a></li>
+                <li><a href="" class="nav-main__item">cennik</a></li>
+                <li><a href="" class="nav-main__item">kontakt</a></li>
+            </ul>
+            <button class="burger-btn">
+                <div class="burger-btn__box">
+                    <div class="burger-btn__bars"></div>
+                </div>
+            </button>
+        </div>
+    </nav>
+
+
+    
+    <script src="js/main.js"></script>
 </body>
+</body>
+
 </html>
