Added navigation from Tropical Paradise

--- a/index.html
+++ b/index.html
@@ -14,26 +14,23 @@
 </head>
 
 <body>
-    <nav class="nav-main">
-        <div class="container">
-            <a href="" class="logo"><img src="./img/page/logo.svg" class="logo__img" alt="Logo"></a>
-            <ul class="nav-main__list">
-                <li><a href="" class="nav-main__item">start</a></li>
-                <li><a href="" class="nav-main__item">oferta</a></li>
-                <li><a href="" class="nav-main__item">galeria</a></li>
-                <li><a href="" class="nav-main__item">cennik</a></li>
-                <li><a href="" class="nav-main__item">kontakt</a></li>
-            </ul>
-            <button class="burger-btn">
-                <div class="burger-btn__box">
-                    <div class="burger-btn__bars"></div>
-                </div>
-            </button>
+    <button class="burger-btn">
+        <div class="burger-btn__box">
+            <div class="burger-btn__bars"></div>
+        </div>
+    </button>
+
+    <nav class="nav">
+        <div class="nav__items">
+            <a href="#islands" class="nav__item">Wyspy</a>
+            <a href="#offers" class="nav__item">Oferty</a>
+            <a href="#reviews" class="nav__item">Opinie</a>
+            <a href="#contact" class="nav__item">Kontakt</a>
         </div>
     </nav>
 
 
-    
+
     <script src="js/main.js"></script>
 </body>
 </body>
