--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                 <li><a href="" class="nav-main__item">cennik</a></li>
                 <li><a href="" class="nav-main__item">kontakt</a></li>
             </ul>
-            <button class="bars"><img src="./img/page/bars.svg" alt="Przycisk nawigacji"></button>
+            
+            <button class="burger" aria-label="Menu">
+                <span class="burger__container" tabindex="-1">
+                  <span class="burger__bars"></span>
+                </span>
+              </button>
         </div>
     </nav>
 
