Add animation in nav links, scroll

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <nav class="nav-main">
-        <div class="container">
+        <div class="container nav-main__container">
             <a href="" class="logo"><img src="./img/page/logo.svg" alt="Logo"></a>
             <ul class="nav-main__list">
                 <li><a href="" class="nav-main__item">start</a></li>
@@ -25,14 +25,16 @@
                 <li><a href="" class="nav-main__item">cennik</a></li>
                 <li><a href="" class="nav-main__item">kontakt</a></li>
             </ul>
-            
+
             <button class="burger" aria-label="Menu">
                 <span class="burger__container" tabindex="-1">
-                  <span class="burger__bars"></span>
+                    <span class="burger__bars"></span>
                 </span>
-              </button>
+            </button>
         </div>
     </nav>
+    <main></main>
+
 
 
 
