--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="nav-main__list">
                 <li><a href="" class="nav-main__item">start</a></li>
                 <li><a href="" class="nav-main__item">oferta</a></li>
-                <li><a href="" class="nav-main__item">galeria</a></li>
+                <li><a href="" class="nav-main__item">realizacje</a></li>
                 <li><a href="" class="nav-main__item">cennik</a></li>
                 <li><a href="" class="nav-main__item">kontakt</a></li>
             </ul>
@@ -33,8 +33,90 @@
             </button>
         </div>
     </nav>
-    <main></main>
+    <header class="header-main">
+        <div class="container">
+            <h1>Strona testowa</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus ex vel commodi quisquam, sit,
+                voluptatum voluptas error dolores laboriosam reprehenderit corporis voluptatem obcaecati quaerat
+                necessitatibus, eligendi autem magni.</p>
+        </div>
+    </header>
+    <main>
+        <section class="offer">
+            <div class="container">
+                <h2>Oferta</h2>
+                <ul>
+                    <li>Tworzenie responsywnych stron internetowych</li>
+                    <li>Optymalizacja wydajności stron internetowych</li>
+                    <li>Projektowanie interfejsów użytkownika (UI)</li>
+                    <li>Programowanie aplikacji internetowych</li>
+                    <li>Rozwijanie i konserwacja istniejących stron internetowych</li>
+                    <li>Integracja zewnętrznych API i usług</li>
+                </ul>
+            </div>
+        </section>
+        <section class="realizations">
+            <div class="container">
+                <h2>Realizacje</h2>
+                <div class="realizations__item">
+                    <h3>Tworzenie responsywnej strony internetowej dla małej firmy kosmetycznej</h3>
+                </div>
+                <div class="realizations__item">
+                    <h3>Optymalizacja wydajności strony internetowej sklepu online zwiększająca prędkość ładowania</h3>
+                </div>
+                <div class="realizations__item">
+                    <h3>Projektowanie nowego interfejsu użytkownika (UI) dla aplikacji społecznościowej</h3>
+                </div>
+                <div class="realizations__item">
+                    <h3>Programowanie aplikacji internetowej do zarządzania projektami dla firmy technologicznej</h3>
+                </div>
+                <div class="realizations__item">
+                    <h3>Rozwijanie i konserwacja istniejącej strony internetowej bloga podróżniczego</h3>
+                </div>
 
+                <div class="realizations__item">
+                    <h3>Integracja zewnętrznego API płatności w aplikacji e-commerce</h3>
+                </div>
+                <div class="realizations__item">
+                    <h3>Tworzenie strony portfolio dla artysty wizualnego</h3>
+                </div>
+                <div class="realizations__item">
+                    <h3>Projektowanie interaktywnego narzędzia do analizy danych dla badacza naukowego</h3>
+                </div>
+            </div>
+        </section>
+        <section class="price">
+            <div class="container">
+                <h2>Cennik</h2>
+                <ul>
+                    <li>Tworzenie responsywnej strony internetowej dla małej firmy kosmetycznej - $1000</li>
+                    <li>Optymalizacja wydajności strony internetowej sklepu online zwiększająca prędkość ładowania -
+                        $800
+                    </li>
+                    <li>Projektowanie nowego interfejsu użytkownika (UI) dla aplikacji społecznościowej - $1200</li>
+                    <li>Programowanie aplikacji internetowej do zarządzania projektami dla firmy technologicznej - $1500
+                    </li>
+                    <li>Rozwijanie i konserwacja istniejącej strony internetowej bloga podróżniczego - $600</li>
+                    <li>Integracja zewnętrznego API płatności w aplikacji e-commerce - $500</li>
+                    <li>Tworzenie strony portfolio dla artysty wizualnego - $700</li>
+                    <li>Projektowanie interaktywnego narzędzia do analizy danych dla badacza naukowego - $1600</li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer class="footer-main">
+        <div class="container">
+            <section>
+                <h3>Kontakt</h3>
+                <p>Jeśli masz pytania lub chciałbyś się skontaktować, możesz to zrobić za pośrednictwem poniższych
+                    danych
+                    kontaktowych:</p>
+                <p>Adres email: <a href="mailto:kontakt@przykladowa-strona.pl">kontakt@przykladowa-strona.pl</a></p>
+                <p>Numer telefonu: +48 123 456 789</p>
+            </section>
+            <p>webLab &copy; 2023</p>
+        </div>
+    </footer>
 
 
 
