Color theme change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <nav class="nav">
-        <div class="container nav-main__container">
+        <div class="container nav__container">
             <a href="" class="logo"><img src="./img/page/logo.svg" alt="Logo"></a>
             <ul class="nav__list">
                 <li><a href="" class="nav__item">start</a></li>
@@ -131,7 +131,7 @@
                     danych
                     kontaktowych:</p>
                 <p>Adres email:<br/><a href="mailto:kontakt@przykladowa-strona.pl">kontakt@przykladowa-strona.pl</a></p>
-                <p>Numer telefonu: +48 123 456 789</p>
+                <p>Numer telefonu:<br/>+48 123 456 789</p>
             </section>
             <p class="footer__copy">webLab &copy; 2023</p>
         </div>
