--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </header>
     <main>
-        <section id="oferta" class="offer">
+        <section id="oferta" class="section offer">
             <div class="container">
                 <h2 class="section__heading">Oferta</h2>
                 <ul>
